--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -21,8 +21,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-SuccessRateColumn.DisplayName=Success Rate
 FailureRateColumn.DisplayName=Failure Rate
-SuccessTimeRateColumn.DisplayName=Success Time Rate
-MinSuccessDuration.DisplayName=Min Success Duration
+MaxDuration.DisplayName=Max Duration
 MaxSuccessDuration.DisplayName=Max Success Duration
+MinDuration.DisplayName=Min Duration
+MinSuccessDuration.DisplayName=Min Success Duration
+SuccessRateColumn.DisplayName=Success Rate
+SuccessTimeRateColumn.DisplayName=Success Time Rate
