Add FailureTimeRate column, simplified and centralized its code.

--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -22,6 +22,7 @@
 # SOFTWARE.
 #
 FailureRateColumn.DisplayName=Failure Rate
+FailureTimeRateColumn.DisplayName=Failure Time Rate
 MaxDuration.DisplayName=Max Duration
 MaxSuccessDuration.DisplayName=Max Success Duration
 MinDuration.DisplayName=Min Duration
