Added two new columns: Average Duration and Average Success Duration

--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -21,11 +21,13 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
+AvgDurationColumn.DisplayName=Average Duration
+AvgSuccessDurationColumn.DisplayName=Average Success Duration
 FailureRateColumn.DisplayName=Failure Rate
 FailureTimeRateColumn.DisplayName=Failure Time Rate
-MaxDuration.DisplayName=Max Duration
-MaxSuccessDuration.DisplayName=Max Success Duration
-MinDuration.DisplayName=Min Duration
-MinSuccessDuration.DisplayName=Min Success Duration
+MaxDurationColumn.DisplayName=Max Duration
+MaxSuccessDurationColumn.DisplayName=Max Success Duration
+MinDurationColumn.DisplayName=Min Duration
+MinSuccessDurationColumn.DisplayName=Min Success Duration
 SuccessRateColumn.DisplayName=Success Rate
 SuccessTimeRateColumn.DisplayName=Success Time Rate
