Added checkout duration metric.

--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -1,7 +1,7 @@
 #
 # MIT License
 #
-# Copyright (c) 2018 Chadi El Masri
+# Copyright (c) 2019 Chadi El Masri
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -22,12 +22,15 @@
 # SOFTWARE.
 #
 AvgDurationColumn.DisplayName=Average Duration
+AvgCheckoutDurationColumn.DisplayName=Average Checkout Duration
 AvgSuccessDurationColumn.DisplayName=Average Success Duration
 FailureRateColumn.DisplayName=Failure Rate
 FailureTimeRateColumn.DisplayName=Failure Time Rate
 MaxDurationColumn.DisplayName=Max Duration
+MaxCheckoutDurationColumn.DisplayName=Max Checkout Duration
 MaxSuccessDurationColumn.DisplayName=Max Success Duration
 MinDurationColumn.DisplayName=Min Duration
+MinCheckoutDurationColumn.DisplayName=Min Checkout Duration
 MinSuccessDurationColumn.DisplayName=Min Success Duration
 SuccessRateColumn.DisplayName=Success Rate
 SuccessTimeRateColumn.DisplayName=Success Time Rate
