--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -24,6 +24,8 @@
 AvgDurationColumn.DisplayName=Average Duration
 AvgCheckoutDurationColumn.DisplayName=Average Checkout Duration
 AvgSuccessDurationColumn.DisplayName=Average Success Duration
+StdevSuccessDurationColumn.DisplayName=Standard Deviation Success Duration
+StdevDurationColumn.DisplayName=Standard Deviation Duration
 FailureRateColumn.DisplayName=Failure Rate
 FailureTimeRateColumn.DisplayName=Failure Time Rate
 MaxDurationColumn.DisplayName=Max Duration
