Unstable rate as percentage

--- a/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/additionalmetrics/Messages.properties
@@ -1,7 +1,7 @@
 #
 # MIT License
 #
-# Copyright (c) 2019 Chadi El Masri
+# Copyright (c) 2022 Chadi El Masri, Oussama Ben Ghorbel
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -27,6 +27,7 @@ AvgSuccessDurationColumn.DisplayName=Average Success Duration
 StdevSuccessDurationColumn.DisplayName=Standard Deviation Success Duration
 StdevDurationColumn.DisplayName=Standard Deviation Duration
 FailureRateColumn.DisplayName=Failure Rate
+UnstableRateColumn.DisplayName=Unstable Rate
 FailureTimeRateColumn.DisplayName=Failure Time Rate
 MaxDurationColumn.DisplayName=Max Duration
 MaxCheckoutDurationColumn.DisplayName=Max Checkout Duration
